# spir-v_binary_shaders_loading_example_glfw_glad

./: CMakeLists.txt  fragment_shader.frag  main.cpp  uniforms.glsl
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
